Test improvements for spark and speed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
 trigger:
   - develop
   - main
+  - "*-develop"
 
 resources:
   containers:
@@ -31,11 +32,12 @@ resources:
 variables:
   isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
   GE_USAGE_STATISTICS_URL: "https://qa.stats.greatexpectations.io/great_expectations/v1/usage_statistics"
+  PIP_CACHE_DIR: $(Pipeline.Workspace)/.pip
 
 stages:
   - stage: lint
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-20.04'
 
     jobs:
       - job: lint
@@ -56,55 +58,56 @@ stages:
 
   - stage: required
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-20.04'
 
     dependsOn: []
 
     jobs:
       - job: compatibility_matrix
         variables:
-          GE_pytest_pip_opts: '--requirement requirements-dev-util.txt --requirement requirements-dev-test.txt'
+          GE_pytest_pip_opts: '--requirement requirements-dev.txt'
           GE_pytest_opts: '--no-sqlalchemy --no-spark'
         strategy:
           matrix:
             Python36-Pandas023:
               python.version: '3.6'
-              pandas.version: '0.23.4'
+              pandas.constraint: '"pandas==0.23.4"'
             Python37-Pandas025:
               python.version: '3.7'
-              pandas.version: '0.25.3'
+              pandas.constraint: '"pandas==0.25.3"'
             Python38-PandasLatest:
               python.version: '3.8'
-              pandas.version: 'latest'
+              pandas.constraint: '"pandas>=1"'
 
-        # TODO: refactor steps into a task
         steps:
           - task: UsePythonVersion@0
             inputs:
               versionSpec: '$(python.version)'
             displayName: 'Use Python $(python.version)'
 
-          - bash: python -m pip install --upgrade pip==20.2.4
-            displayName: 'Update pip'
-
-          - bash: pip install  pandas
-            condition: eq(variables['pandas.version'], 'latest')
-            displayName: 'Install pandas latest'
-
-          - bash: pip install  pandas==$(pandas.version)
-            condition: ne(variables['pandas.version'], 'latest')
-            displayName: 'Install pandas - $(pandas.version)'
+          - task: Cache@2
+            inputs:
+              key: 'python | "$(Agent.OS)" | requirements.txt | $(pandas.constraint) | requirements-dev.txt'
+              restoreKeys: |
+                python | "$(Agent.OS)" | requirements.txt | $(pandas.constraint)
+                python | "$(Agent.OS)" | requirements.txt
+                python | "$(Agent.OS)"
+                python
+              path: $(PIP_CACHE_DIR)
+            displayName: Cache pip packages
 
           - script: |
-              pip install  $(GE_pytest_pip_opts)
-              pip install  --requirement requirements.txt
+              python -m pip install --upgrade pip==20.2.4
+              python -m pip install --upgrade pip
+              pip install $(GE_pytest_pip_opts)
+              pip install $(pandas.constraint)
               # Consider fragmenting *all* integration tests into separate folder and run
-              pip install  .
+              pip install -e .
             displayName: 'Install dependencies'
 
           - script: |
-              pip install  pytest pytest-cov pytest-azurepipelines
-              pytest $(GE_pytest_opts) --napoleon-docstrings --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+              pip install pytest pytest-cov pytest-azurepipelines
+              pytest $(GE_pytest_opts) --napoleon-docstrings --junitxml=junit/test-results.xml --cov=great_expectations --cov-report=xml --cov-report=html
             displayName: 'pytest'
 
           - task: PublishTestResults@2
@@ -124,17 +127,16 @@ stages:
           postgres: postgres
 
         variables:
-          GE_pytest_pip_opts: '--requirement requirements-dev-util.txt --requirement requirements-dev-spark.txt --requirement requirements-dev-sqlalchemy.txt --requirement requirements-dev-test.txt'
-          GE_pytest_opts: ''
+          GE_pytest_pip_opts: '--requirement requirements-dev.txt --requirement requirements-dev-spark.txt --requirement requirements-dev-sqlalchemy.txt'
 
         strategy:
           matrix:
-            Python36:
-              python.version: '3.6'
-              pandas.version: 'latest'
-            Python37:
+            Python37-spark-expectations:
               python.version: '3.7'
-              pandas.version: 'latest'
+              GE_pytest_opts: ''
+            Python38-spark-expectations:
+              python.version: '3.8'
+              GE_pytest_opts: ''
 
         steps:
           - task: UsePythonVersion@0
@@ -142,26 +144,25 @@ stages:
               versionSpec: '$(python.version)'
             displayName: 'Use Python $(python.version)'
 
-          - bash: python -m pip install --upgrade pip==20.2.4
-            displayName: 'Update pip'
+          - task: Cache@2
+            inputs:
+              key: 'python | "$(Agent.OS)" | requirements.txt | requirements-dev.txt | requirements-dev-sqlalchemy.txt | requirements-dev-spark.txt'
+              restoreKeys: |
+                python | "$(Agent.OS)" | requirements.txt | requirements-dev.txt
+                python | "$(Agent.OS)" | requirements.txt
+                python | "$(Agent.OS)"
+                python
+              path: $(PIP_CACHE_DIR)
+            displayName: Cache pip packages
 
           - script: |
               sudo apt-get install -y pandoc
-              pip install pypandoc
             displayName: 'Install pandoc'
 
-          - bash: pip install  pandas
-            condition: eq(variables['pandas.version'], 'latest')
-            displayName: 'Install pandas latest'
-
-          - bash: pip install  pandas==$(pandas.version)
-            condition: ne(variables['pandas.version'], 'latest')
-            displayName: 'Install pandas - $(pandas.version)'
-
           - script: |
-              pip install --requirement requirements.txt
-              pip install $(GE_pytest_pip_opts)
-              pip install  .
+              python -m pip install --upgrade pip==20.2.4
+              pip install pypandoc --requirement requirements.txt $(GE_pytest_pip_opts)
+              pip install  -e .
             displayName: 'Install dependencies'
 
           - script: |
@@ -203,9 +204,8 @@ stages:
             displayName: 'Update pip'
 
           - script: |
-                pip install --requirement requirements-dev-util.txt --requirement requirements-dev-test.txt
-                pip install --requirement requirements.txt
-                pip install .
+                pip install --requirement requirements.txt --requirement requirements-dev.txt
+                pip install -e .
             displayName: 'Install dependencies'
 
           - script: |
@@ -215,7 +215,7 @@ stages:
 
   - stage: db_integration
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-20.04'
 
     dependsOn: []
 
@@ -251,7 +251,7 @@ stages:
 
           - script: |
               pip install --requirement requirements.txt
-              pip install --requirement requirements-dev-test.txt --requirement requirements-dev-sqlalchemy.txt --requirement requirements-dev-util.txt
+              pip install --requirement requirements-dev.txt --requirement requirements-dev-sqlalchemy.txt
               pip install .
             displayName: 'Install dependencies'
 
@@ -282,7 +282,7 @@ stages:
 
           - script: |
               pip install --requirement requirements.txt
-              pip install --requirement requirements-dev-test.txt --requirement requirements-dev-sqlalchemy.txt --requirement requirements-dev-util.txt
+              pip install --requirement requirements-dev.txt --requirement requirements-dev-sqlalchemy.txt
               pip install .
             displayName: 'Install dependencies'
 
@@ -295,7 +295,7 @@ stages:
     condition: and(succeeded(), eq(variables.isMain, true))
 
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-20.04'
 
     dependsOn: [required, lint, db_integration, usage_stats_integration]
 
