--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,9 +4,20 @@
 # Otherwise (i.e., if/when you are not concerned with running tests), please ignore these comments.
 
 --requirement requirements.txt
---requirement requirements-dev-util.txt
---requirement requirements-dev-spark.txt
---requirement requirements-dev-sqlalchemy.txt
---requirement requirements-dev-test.txt
---requirement requirements-dev-build.txt
---requirement requirements-dev-publish.txt
+boto3>=1.9  # all_tests
+feather-format>=0.4.1  # all_tests
+flake8==3.8.3  # lint
+flask>=1.0.0 # for s3 test only
+freezegun>=0.3.15  # all_tests
+google-cloud-storage>=1.28.0  # all_tests
+isort==5.4.2  # lint
+moto[ec2]>=1.3.7  # all_tests
+pre-commit>=2.6.0  # lint
+pyarrow>=0.12.0,<=1.0.0  # all_tests
+pypd==1.1.0  # all_tests
+pytest>=5.3.5,<6.0.0  # all_tests
+pytest-cov>=2.8.1  # all_tests
+pyupgrade==2.7.2  # lint
+requirements-parser>=0.2.0  # all_tests
+s3fs>=0.5.1 # all_tests
+xlrd>=1.1.0  # all_tests
